syntax = "proto3";

package inz.cart;

import "products/service.proto";

service CartService {
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {}
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse) {}
  rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse) {}
}

message Cart {
  string cart_id = 1;
  int32 user_id = 2;
  repeated products.Product products = 3;
  int64 updated_at = 4;
}

message GetCartRequest { int32 user_id = 1; }

message GetCartResponse { Cart cart = 1; }

message AddToCartRequest {
  int32 user_id = 1;
  string cart_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
}

message AddToCartResponse { Cart cart = 1; }

message RemoveFromCartRequest {
  int32 user_id = 1;
  string cart_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
}

message RemoveFromCartResponse { Cart cart = 1; }
