syntax = "proto3";

package inz;

service UsersService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse { string access_token = 1; }